intel/bench_214/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main/log.txt
bench_214/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main.c:6:13: error: redeclaration of C++ built-in type 'bool'
typedef int bool;
            ^
bench_214/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main.c:31:16: error: cannot initialize a variable of type 'xmlNodePtr' (aka 'TYPE_4__ *') with an rvalue of type 'void *'
    xmlNodePtr miscNode1 = NULL, miscNode2 = NULL;
               ^           ~~~~
bench_214/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main/extr_.reactossdklib3rdpartylibxml2xpath.c_xmlXPathCmpNodesExt_with_main.c:31:34: error: cannot initialize a variable of type 'xmlNodePtr' (aka 'TYPE_4__ *') with an rvalue of type 'void *'
    xmlNodePtr miscNode1 = NULL, miscNode2 = NULL;
                                 ^           ~~~~
3 errors generated.
HLS FPGA Parse FAILED.
